--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,10 +9,56 @@
 */
 
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 body, html {
-    font-family: Arial, Helvetica, sans-serif;
+    height: 100vh;
+    width: 100vw;
+    background-color: #171B26;
+    color: #ACF2F2;
 }
+
+main {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+}
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #5e7ebf;
+    position: absolute;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px 0px #0000006e;
+}
+
+section#login h1 {
+    text-align: center;
+    padding: 20px;
+    font-size: 1.5em;
+}
+section#login > div#imagen {
+    display: block;
+    background: #222a59 url(../imagens/pexels-timmossholder-3612932.jpg) no-repeat left bottom;
+    background-size: cover;
+    height: 200px;
+    border-radius: 20px;
+}
+
+section#login > div#formulario {
+    display: block;
+    padding: 20px;
+}
+
