--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -42,14 +42,23 @@ Large desktop: 1441 pixels and above, for large desktop monitors and high-resolu
     }
     
     section#login > div#imagem {
-        float: left; 
+        float: right; 
         width: 50%; 
         height: 100%;
     }
     
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 50%; 
+    }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulario > p {
+        font-size: 1.2em;
+    
     }
 }
 
