--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,14 +31,14 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
-
     background-color: #5e7ebf;
     width: 270px;
     height: 520px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.450);
+
+    transform: translate(-50%, -50%);
     transition: width .5s, height .5s;
     transition-timing-function: ease;
 }
@@ -68,16 +68,40 @@ div#formulario > p {
 form > div.campo {
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     padding-left: 10px;
     display: block;
     margin: 10px 0px;
     background-color: #2e5bb686;
+    border: 2px solid #2e5bb686;
+    transition: border .5s, background-color .5s;
 }
 
 div.campo > label {
-    font-size: 0.8em;
+    display: none;
     
+}
+
+div.campo > span {
+    width: 40px;
+    font-size: 2em;
+    color: #ACF2F2;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: #ACF2F2;
+    width: calc(100% - 45px);
+    font-size: 1em;
+    height: 100%;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-12px);
+}
+
+div.campo > input:focus-within {
+    background-color: #ffffff;
+    border: 2px solid #ffffff;
 }
 
 form > input[type=submit] {
